# UrbiFaceRecognition

./: CMakeLists.txt  README.md
cmake/: FindUrbi.cmake
src/: CMakeLists.txt  ufacerecognition.cpp
